# A2C_DVI_Firmware

./: .gitignore  CMakeLists.txt  README.md
Releases/: A2C_DVI_S_v1.8.0.uf2  A2C_DVI_S_v1.8.3.uf2  A2C_DVI_v1.7.5.uf2  A2C_DVI_v1.7.6.uf2
Releases/A2DVI (Slotted Machines)/: A2DVI_S_v1.8.1b.uf2  README.md
firmware/: CMakeLists.txt  main.c
firmware/a2c/: a2c.c  a2c.h  a2c_SEROUT.pio  a2c_SND.pio  hgrdecode_LUT.h
firmware/applebus/: abus.c  abus.h  abus.pio  abus_setup.c  abus_setup.h
firmware/config/: config.c  config.h  device_regs.c
firmware/dvi/: a2dvi.c  a2dvi.h
firmware/menu/: menu.c
firmware/render/: render.c  render.h  render_debug.c  render_splash.c
firmware/scripts/: copy_to_ram_custom_rp2040.ld  copy_to_ram_custom_rp2040_a2c.ld
libraries/libdvi/: audio_ring.c  data_packet.c  data_packet.h  dvi.c  dvi.h  dvi_config_defs.h  dvi_timing.c  dvi_timing.h
